# TRD

./: .gitignore  CMakeLists.txt  main.cpp
DataStructures/:  convexHullTrickOnMAX.cpp  fenwickLowerBound.cpp  fenwickTree.cpp  heavyLightDecomposition.cpp  linkCutTree.cpp  minimalOnQueueInLinearTime.cpp  onlineConvexHullTrickOnMAX.cpp  rangeChminChmaxAddRangeSum.cpp  segregationTree.cpp
Flows/: minMaxCostFlow.cpp
Flows/Matchings/: Hungarioan Algotithm.cpp
Flows/Max Flow/: Dinitz.cpp
Flows/Min Cost Flow/: Levit MCF.cpp  SPFA MCMF.cpp
Geometry/: 3DConvexHull.cpp  SmallestEnclosingCircleOrSphere.cpp  circleLineIntersections.cpp  convexHull.cpp  dynamicConvexHull.cpp  geometryTemplate .cpp  halfPlaneIntersection.cpp  tangentsBetweenCircles.cpp
Graphs/: aStar.cpp  articulationPoint.cpp  bridges.cpp  connectedComponents.cpp  dijkstra.cpp  findCycle.cpp  kuhn.cpp  longestCommonSubsequence.cpp  pairwiseDistances.cpp  strongConnectedConponents.cpp
Graphs/Connection Componet/: 2-coponent connections.py
Graphs/Pathfinder/: Dijkstra between points.py
Hashs/: numberOfDistinctSubstrings.cpp
Math/:  sumOverSubmasks.cpp  binpow.cpp  countPrimes.cpp  fastWaveletTransform.cpp  floorSum.cpp  gcd.cpp  moduloMult.cpp  simplexAlgorithm.cpp  squareRootModulo.cpp
Miscellaneous/: fastIntegerIO.cpp
NumberTheory/: binomialCoefficients.cpp  relativelyPrimeNumbers.cpp  ternarySearch.cpp
Search/: binsearchByAnswer.cpp  bitsearch.cpp
Sorting/: MOsAlgoSorting.cpp
Strings/: ahoCorasick.cpp  eertree.cpp  maineLorenz.cpp  manachersAlgorithm.cpp  prefixFunction.cpp  suffixArray.cpp  suffixAutomaton.cpp  zFunction.cpp
